sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:13: error: ';' expected but 'if' found.
		}if (trié==false) {return -1}
                 ^AlgCocktailSort3:22: error: ';' expected but 'if' found.
			}if (trié==false) {return -1}
                         ^